[gd_scene load_steps=9 format=2]

[ext_resource path="res://networking/NetworkGateway.gd" type="Script" id=1]
[ext_resource path="res://networking/SignallingWebsocket.gd" type="Script" id=2]
[ext_resource path="res://networking/SignallingUDP.gd" type="Script" id=3]
[ext_resource path="res://networking/MQTT.gd" type="Script" id=4]
[ext_resource path="res://networking/SignallingMQTT.gd" type="Script" id=5]
[ext_resource path="res://networking/WebRTCmultiplayerserver.gd" type="Script" id=6]
[ext_resource path="res://networking/ServermodeMQTTsignal.gd" type="Script" id=7]
[ext_resource path="res://networking/ClientmodeMQTTsignal.gd" type="Script" id=8]

[node name="NetworkGateway" type="Panel"]
self_modulate = Color( 0.32549, 0.317647, 0.317647, 1 )
margin_left = 1.74915
margin_right = 560.749
margin_bottom = 379.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProtocolOptions" type="OptionButton" parent="."]
margin_left = 278.772
margin_top = 11.087
margin_right = 480.772
margin_bottom = 31.087
text = "WebRTC (mqtt signal)"
items = [ "ENet", null, false, 0, null, "WebSocket", null, false, 1, null, "WebRTC (websocket signal)", null, false, 2, null, "WebRTC (mqtt signal)", null, false, 3, null ]
selected = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ProtocolOptions"]
margin_left = -68.7348
margin_top = 2.31631
margin_right = -4.73477
margin_bottom = 16.3163
text = "Protocol:"

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 290.879
margin_top = 260.243
margin_right = 526.879
margin_bottom = 289.243
color = Color( 0.215686, 0.137255, 0.917647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
margin_left = 7.0
margin_top = 5.0
margin_right = 227.0
margin_bottom = 24.0
color = Color( 0.00784314, 0.00784314, 0.00784314, 1 )

[node name="StatusRec" type="RichTextLabel" parent="ColorRect"]
margin_left = 16.0
margin_top = 8.0
margin_right = 220.0
margin_bottom = 23.0
rect_pivot_offset = Vector2( 103.791, -1.38985 )
text = "nothing"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NetworkOptions" type="OptionButton" parent="."]
margin_left = 137.455
margin_top = 37.5457
margin_right = 315.455
margin_bottom = 57.5457
text = "Network off"
items = [ "Network off", null, false, 0, null, "As server", null, false, 1, null, "Local network", null, false, 3, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NetworkLabel" type="Label" parent="NetworkOptions"]
margin_left = -126.63
margin_top = 0.733147
margin_right = -44.6297
margin_bottom = 19.7331
rect_pivot_offset = Vector2( 103.791, -1.38985 )
text = "Connection:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="portnumber" type="LineEdit" parent="NetworkOptions"]
margin_left = 265.313
margin_top = 0.881915
margin_right = 323.313
margin_bottom = 24.8819
text = "4547"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NetworkOptions/portnumber"]
margin_left = -60.0175
margin_top = 4.41583
margin_right = -20.0175
margin_bottom = 18.4158
text = "port:"

[node name="roomname" type="LineEdit" parent="NetworkOptions"]
visible = false
margin_left = 265.313
margin_top = 0.881915
margin_right = 323.313
margin_bottom = 24.8819
text = "carrot"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NetworkOptions/roomname"]
margin_left = -59.2238
margin_top = 4.41583
margin_right = -19.2238
margin_bottom = 18.4158
text = "room:"

[node name="Doppelganger" type="CheckBox" parent="."]
margin_left = 9.0
margin_top = 262.0
margin_right = 212.0
margin_bottom = 286.0
text = "doppelganger"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerList" type="OptionButton" parent="."]
margin_left = 224.993
margin_top = 244.231
margin_right = 536.993
margin_bottom = 272.231
text = "me"
items = [ "me", null, false, 0, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PlayerList"]
margin_left = -207.0
margin_top = 6.0
margin_right = -108.0
margin_bottom = 24.0
text = "Player list"

[node name="Interpdelay" type="HSlider" parent="."]
margin_left = 223.028
margin_top = 289.1
margin_right = 535.028
margin_bottom = 307.1
max_value = 1000.0
value = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InterpdelayLabel" type="Label" parent="Interpdelay"]
margin_left = -208.149
margin_top = -0.654202
margin_right = -56.149
margin_bottom = 19.3458
rect_pivot_offset = Vector2( 103.791, -1.38985 )
text = "Interpdelay:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DoppelgangerPanel" type="Panel" parent="."]
margin_left = 3.0
margin_top = 305.0
margin_right = 551.0
margin_bottom = 370.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Netdelay" type="HSlider" parent="DoppelgangerPanel"]
margin_left = 223.215
margin_top = 12.233
margin_right = 535.215
margin_bottom = 30.233
max_value = 1000.0
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NetdelayLabel" type="Label" parent="DoppelgangerPanel/Netdelay"]
margin_left = -214.215
margin_top = -0.233002
margin_right = -26.215
margin_bottom = 16.767
rect_pivot_offset = Vector2( 103.791, -1.38985 )
text = "Netdelaysimulation:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Netdroprate" type="HSlider" parent="DoppelgangerPanel"]
margin_left = 221.508
margin_top = 41.6386
margin_right = 533.508
margin_bottom = 59.6386
max_value = 1000.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NetdroprateLabel" type="Label" parent="DoppelgangerPanel/Netdroprate"]
margin_left = -215.508
margin_top = -5.6386
margin_right = -27.508
margin_bottom = 11.3614
rect_pivot_offset = Vector2( 103.791, -1.38985 )
text = "Netdropsimulation:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SignallingUDP" type="Node" parent="."]
script = ExtResource( 3 )

[node name="SignallingWebsocket" type="Node" parent="."]
script = ExtResource( 2 )

[node name="SignallingMQTT" type="Node" parent="."]
script = ExtResource( 5 )

[node name="MQTT" type="Node" parent="SignallingMQTT"]
script = ExtResource( 4 )

[node name="NetworkRole" type="Control" parent="."]
margin_left = 14.2407
margin_top = 76.0101
margin_right = 541.241
margin_bottom = 179.01

[node name="SetupMQTTsignal" type="Control" parent="NetworkRole"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -299.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="brokeraddress" type="LineEdit" parent="NetworkRole/SetupMQTTsignal"]
margin_left = 13.2515
margin_top = 28.0224
margin_right = 208.251
margin_bottom = 52.0224
text = "mosquitto.doesliverpool.xyz"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NetworkRole/SetupMQTTsignal/brokeraddress"]
margin_left = -13.4544
margin_top = -23.386
margin_right = 68.5456
margin_bottom = -9.38597
text = "MQTT broker"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="usewebsocket" type="CheckBox" parent="NetworkRole/SetupMQTTsignal/brokeraddress"]
margin_left = 95.0213
margin_top = -26.0677
margin_right = 194.021
margin_bottom = -2.06775
text = "Websocket"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="roomname" type="LineEdit" parent="NetworkRole/SetupMQTTsignal"]
margin_left = 102.341
margin_top = 53.4543
margin_right = 182.341
margin_bottom = 77.4543
text = "cabbage"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NetworkRole/SetupMQTTsignal/roomname"]
margin_left = -90.8168
margin_top = 5.04541
margin_right = -13.8168
margin_bottom = 19.0454
text = "Roomname:"

[node name="MQTT" type="Node" parent="NetworkRole/SetupMQTTsignal"]
script = ExtResource( 4 )

[node name="VSeparator" type="VSeparator" parent="NetworkRole/SetupMQTTsignal"]
margin_left = 218.0
margin_top = 23.0
margin_right = 229.0
margin_bottom = 63.0

[node name="autoconnect" type="CheckBox" parent="NetworkRole/SetupMQTTsignal"]
margin_left = -0.0304432
margin_top = 77.8232
margin_right = 106.97
margin_bottom = 101.823
pressed = true
text = "autoconnect"

[node name="client_id" type="LineEdit" parent="NetworkRole/SetupMQTTsignal"]
margin_left = 110.0
margin_top = 77.0
margin_right = 217.0
margin_bottom = 101.0

[node name="ServermodeMQTTsignal" type="Control" parent="NetworkRole"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 221.273
margin_top = 8.4549
margin_right = -10.7272
margin_bottom = -27.5451
script = ExtResource( 7 )

[node name="StartServer" type="Button" parent="NetworkRole/ServermodeMQTTsignal"]
margin_left = 50.8267
margin_top = 16.2529
margin_right = 113.827
margin_bottom = 36.2529
toggle_mode = true
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="statuslabel" type="Label" parent="NetworkRole/ServermodeMQTTsignal/StartServer"]
margin_left = 71.0
margin_top = 1.15912
margin_right = 122.0
margin_bottom = 20.1591
text = "Off"

[node name="ClientsList" type="OptionButton" parent="NetworkRole/ServermodeMQTTsignal"]
margin_left = 43.4352
margin_top = 50.7255
margin_right = 181.435
margin_bottom = 70.7255
text = "none"
items = [ "none", null, false, 0, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClientmodeMQTTsignal" type="Control" parent="NetworkRole"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 229.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 8 )

[node name="StartClient" type="Button" parent="NetworkRole/ClientmodeMQTTsignal"]
margin_left = 53.5681
margin_top = 3.52269
margin_right = 114.568
margin_bottom = 23.5227
toggle_mode = true
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="statuslabel" type="Label" parent="NetworkRole/ClientmodeMQTTsignal/StartClient"]
margin_left = 67.2717
margin_top = 5.88629
margin_right = 107.272
margin_bottom = 19.8863
text = "Off"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WebRTCmultiplayerserver" type="Control" parent="."]
margin_left = 18.0
margin_top = 181.0
margin_right = 245.0
margin_bottom = 226.0
script = ExtResource( 6 )

[node name="StartWebRTCmultiplayer" type="Button" parent="WebRTCmultiplayerserver"]
margin_left = 5.24408
margin_top = 15.7322
margin_right = 136.244
margin_bottom = 35.7322
toggle_mode = true
text = "StartWebrtc server"

[node name="monitorlog" type="TextEdit" parent="WebRTCmultiplayerserver"]
margin_left = -1.49829
margin_top = 20.2271
margin_right = 141.502
margin_bottom = 60.2271

[node name="WebRTCmultiplayerclient" type="Control" parent="."]
margin_left = 260.712
margin_top = 175.648
margin_right = 300.712
margin_bottom = 215.648
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartWebRTCmultiplayer" type="Button" parent="WebRTCmultiplayerclient"]
margin_left = 3.75926
margin_top = 6.8508
margin_right = 130.759
margin_bottom = 26.8508
toggle_mode = true
text = "StartWebrtc client"

[connection signal="item_selected" from="ProtocolOptions" to="." method="_on_ProtocolOptions_item_selected"]
[connection signal="item_selected" from="NetworkOptions" to="." method="_on_OptionButton_item_selected"]
[connection signal="toggled" from="Doppelganger" to="." method="_on_Doppelganger_toggled"]
[connection signal="toggled" from="NetworkRole/ServermodeMQTTsignal/StartServer" to="NetworkRole/ServermodeMQTTsignal" method="_on_StartServer_toggled"]
[connection signal="toggled" from="NetworkRole/ClientmodeMQTTsignal/StartClient" to="NetworkRole/ClientmodeMQTTsignal" method="_on_StartClient_toggled"]
[connection signal="toggled" from="WebRTCmultiplayerserver/StartWebRTCmultiplayer" to="WebRTCmultiplayerserver" method="_on_StartWebRTCmultiplayer_toggled"]
